--- a/app/src/main/res/layout/activity_what_happend_today_note.xml
+++ b/app/src/main/res/layout/activity_what_happend_today_note.xml
@@ -33,7 +33,7 @@
     </ScrollView>
 
     <Button
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SAVE NOTE"
         android:id="@+id/saveTextButton"
@@ -41,7 +41,9 @@
         android:layout_centerHorizontal="true"
         android:onClick="saveTextClicked"
         android:background="@drawable/button_style"
-        android:textColor="@color/button_text_colour" />
+        android:textColor="@color/button_text_colour"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
     <TextView
         android:text="Text Note"
