--- a/app/src/main/res/layout/activity_what_happened_today_main.xml
+++ b/app/src/main/res/layout/activity_what_happened_today_main.xml
@@ -24,7 +24,7 @@
         android:divider="#015981" />
 
     <Button
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ADD NEW FOLDER"
         android:id="@+id/wht_main_button"
@@ -34,7 +34,9 @@
         android:background="@drawable/button_style"
         android:textColor="@color/button_text_colour"
         android:layout_alignParentEnd="false"
-        android:layout_alignParentStart="false" />
+        android:layout_alignParentStart="false"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
