--- a/app/src/main/res/layout/activity_what_happened_today_subject.xml
+++ b/app/src/main/res/layout/activity_what_happened_today_subject.xml
@@ -35,7 +35,7 @@
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:text="RECORD\nAUDIO"
         android:id="@+id/wht_subject_audio_button"
         android:layout_alignParentBottom="true"
@@ -43,12 +43,14 @@
         android:layout_alignParentStart="true"
         android:onClick="newAudioNote"
         android:background="@drawable/button_style"
-        android:textColor="@color/button_text_colour" />
+        android:textColor="@color/button_text_colour"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:text="MAKE A\nNOTE"
         android:id="@+id/wht_subject_text_button"
         android:layout_alignParentBottom="true"
@@ -56,18 +58,22 @@
         android:layout_alignEnd="@+id/wht_subject_listview"
         android:onClick="newTextNote"
         android:background="@drawable/button_style"
-        android:textColor="@color/button_text_colour" />
+        android:textColor="@color/button_text_colour"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:text="TAKE A\nPHOTO"
         android:id="@+id/wht_subject_image_button"
         android:layout_alignTop="@+id/wht_subject_audio_button"
         android:layout_centerHorizontal="true"
         android:onClick="newImageNote"
         android:background="@drawable/button_style"
-        android:textColor="@color/button_text_colour" />
+        android:textColor="@color/button_text_colour"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
 </RelativeLayout>
