--- a/app/src/main/res/layout/activity_whats_this_data_display.xml
+++ b/app/src/main/res/layout/activity_whats_this_data_display.xml
@@ -71,7 +71,7 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SAVE AS NOTE"
         android:id="@+id/saveAsNoteButton"
@@ -80,6 +80,8 @@
         android:onClick="saveAsNoteClicked"
         android:background="@drawable/button_style"
         android:textColor="@color/button_text_colour"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
 </RelativeLayout>
