--- a/app/src/main/res/layout/activity_whats_this_image_display.xml
+++ b/app/src/main/res/layout/activity_whats_this_image_display.xml
@@ -35,5 +35,28 @@
         android:layout_alignParentRight="false"
         android:layout_alignParentEnd="true"
         android:layout_above="@+id/imageDescDisplay"
-        android:layout_alignParentTop="true" />
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="35dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView6"
+        android:focusableInTouchMode="false"
+        android:src="@drawable/uealogo_white_stacked_small"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Image Display"
+        android:id="@+id/textView2"
+        android:gravity="center_vertical|center_horizontal"
+        android:textSize="30dp"
+        android:textColor="#ffffffff"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentRight="true" />
 </RelativeLayout>
