--- a/app/src/main/res/layout/activity_whats_this_main.xml
+++ b/app/src/main/res/layout/activity_whats_this_main.xml
@@ -20,7 +20,9 @@
         android:textSize="30dp"
         android:autoText="true"
         android:textColor="#ffffffff"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="15dp" />
 
     <Button
         android:layout_width="fill_parent"
@@ -51,5 +53,15 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:onClick="addContentClicked"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView7"
+        android:focusableInTouchMode="false"
+        android:src="@drawable/uealogo_white_stacked_small"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
