--- a/app/src/main/res/layout/wht_subject_dialog.xml
+++ b/app/src/main/res/layout/wht_subject_dialog.xml
@@ -4,8 +4,7 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical"
-              android:padding="10dp"
-    android:background="#015981">
+              android:padding="10dp" >
 
 
 
@@ -14,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Text Note"
-        android:textColor="#ffffffff"
-        android:textColorHint="#bacfcfcf">
+        android:textColorHint="#bacfcfcf"
+        android:maxLength="20" >
         <requestFocus />
 
     </EditText>
