--- a/app/src/main/res/layout/wmc_location_dialog.xml
+++ b/app/src/main/res/layout/wmc_location_dialog.xml
@@ -2,16 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-    android:background="#015981">
+              android:layout_height="match_parent" >
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/locationNameInput"
         android:layout_gravity="center_horizontal"
-        android:textColor="#ffffffff"
-        android:textColorHint="#bacfcfcf">
+        android:textColorHint="#bacfcfcf"
+        android:maxLength="20" >
         <requestFocus />
         </EditText>
 
