--- a/app/src/main/res/layout/activity_what_happend_today_note.xml
+++ b/app/src/main/res/layout/activity_what_happend_today_note.xml
@@ -23,7 +23,7 @@
 
         <EditText
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:ems="10"
             android:id="@+id/textNoteInput"
@@ -47,8 +47,8 @@
 
     <TextView
         android:text="Text Note"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/wht_note_title"
         android:textSize="30dp"
         android:autoText="false"
@@ -56,7 +56,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="15dp" />
+        android:layout_alignTop="@+id/imageView2"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_toRightOf="@+id/imageView2"
+        android:gravity="center"
+        android:layout_marginTop="-5dp"
+        android:maxWidth="150dp" />
 
     <ImageView
         android:layout_width="wrap_content"
