--- a/app/src/main/res/layout/activity_what_happened_today_main.xml
+++ b/app/src/main/res/layout/activity_what_happened_today_main.xml
@@ -41,14 +41,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="What Happened\n        Today?"
+        android:text="What Happened\nToday?"
         android:id="@+id/wht_subject_title"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="30dp"
+        android:textSize="28dp"
         android:textColor="#ffffffff"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="-5dp" />
+        android:layout_alignTop="@+id/imageView3"
+        android:layout_alignBottom="@+id/imageView3"
+        android:layout_toRightOf="@+id/imageView3"
+        android:layout_marginTop="-5dp"
+        android:gravity="center" />
 
     <ImageView
         android:layout_width="wrap_content"
