--- a/app/src/main/res/layout/activity_whats_this_data_display.xml
+++ b/app/src/main/res/layout/activity_whats_this_data_display.xml
@@ -22,7 +22,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="15dp" />
+        android:layout_alignBottom="@+id/imageView5"
+        android:layout_toRightOf="@+id/imageView5" />
 
     <ScrollView
         android:layout_width="fill_parent"
