NFC Logo and description added to main activity. New note dialogues added to individualise each note type.

--- a/app/src/main/res/layout/wht_audio_note_dialog.xml
+++ b/app/src/main/res/layout/wht_audio_note_dialog.xml
@@ -9,10 +9,10 @@
 
 
     <EditText
-        android:id="@+id/editTextDialogUserInput"
+        android:id="@+id/editTextDialogNoteInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="New Folder"
+        android:hint="Audio Note"
         android:textColorHint="#bacfcfcf"
         android:maxLength="20" >
         <requestFocus />
