--- a/app/src/main/res/layout/wht_text_note_dialog.xml
+++ b/app/src/main/res/layout/wht_text_note_dialog.xml
@@ -9,10 +9,10 @@
 
 
     <EditText
-        android:id="@+id/editTextDialogNoteInput"
+        android:id="@+id/editTextDialogUserInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Media Note"
+        android:hint="Text Note"
         android:textColorHint="#bacfcfcf"
         android:maxLength="20" >
         <requestFocus />
