--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,9 @@
         android:layout_centerInParent="true"
         android:layout_marginBottom="20dp"
         android:layout_alignLeft="@+id/mainActivityWHTButton"
-        android:layout_alignRight="@+id/mainActivityWHTButton" />
+        android:layout_alignRight="@+id/mainActivityWHTButton"
+        android:layout_below="@+id/main_activity_logo"
+        android:layout_marginTop="100dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -64,4 +66,31 @@
         android:src="@drawable/uealogo_white_stacked_small"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/imageView10"
+        android:src="@drawable/nfc_logo"
+        android:layout_marginTop="60dp"
+        android:layout_below="@+id/mainActivityWHTButton"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Scan NFC tags around campus for interesting info on buildings and people!"
+        android:id="@+id/textView4"
+        android:layout_centerHorizontal="true"
+        android:textSize="15dp"
+        android:textColor="#ffffffff"
+        android:gravity="center"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentRight="false"
+        android:layout_below="@+id/imageView10"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="10dp" />
+
 </RelativeLayout>
