Error with notes fixed. Toasts added to navigation to show current gps status. Auto naming added to locations.

--- a/app/src/main/res/layout/wht_text_note_dialog.xml
+++ b/app/src/main/res/layout/wht_text_note_dialog.xml
@@ -12,6 +12,7 @@
         android:id="@+id/editTextDialogUserInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:hint="Text Note"
         android:textColorHint="#bacfcfcf"
         android:maxLength="20" >
