--- a/app/src/main/res/layout/wmc_location_dialog.xml
+++ b/app/src/main/res/layout/wmc_location_dialog.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" >
+    android:id="@+id/layout_root"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:padding="10dp" >
 
     <EditText
+        android:id="@+id/editLocationDialogUserInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/locationNameInput"
+        android:hint="New Location"
         android:layout_gravity="center_horizontal"
         android:textColorHint="#bacfcfcf"
         android:maxLength="20" >
